Functional navigation with horseman

--- a/package.json
+++ b/package.json
@@ -5,5 +5,10 @@
   "main": "index.js",
   "repository": "https://github.com/kennedyrose/download-comic-db.git",
   "author": "Kennedy Rose <kennedy@kennedyrose.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "dotenv": "^4.0.0",
+    "node-horseman": "^3.3.0",
+    "phantomjs-prebuilt": "^2.1.14"
+  }
 }
